--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,9 +16,9 @@ datasource.removeAbandonedTimeout=120
 
 # Custom DataSource
 paymanage.mysql.driver=com.mysql.jdbc.Driver
-paymanage.jdbc.url=jdbc:mysql://localhost:3306/asset?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-paymanage.jdbc.username=work
-paymanage.jdbc.password=123456
+paymanage.jdbc.url=jdbc:mysql://gzns-nbg-fpu-aug-c02xi2-51.gzns:8306/dev_assets4?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+paymanage.jdbc.username=payment
+paymanage.jdbc.password=payment
 paymanage.jdbc.maxActive=30
 
 #asset.jdbc.url=jdbc:mysql://localhost:3306/asset
